# embedded-lab

./: .gitignore  CMakeLists.txt  README.md  Satellite.cpp  Satellite.h  SatelliteNetwork.cpp  SatelliteNetwork.h  combine_files.sh  combined_main.cpp  globals.cpp  globals.h  main.cpp  profile.sh  run_sequence.sh  timer.cpp  timer.h
profiling_data/01_initial/: 2024-04-18_16-08-07_callgrind.out  2024-04-18_16-08-07_internal.txt  2024-04-18_16-08-07_perf.data
profiling_data/02_const_bool_for_DEBUG_MODE/: 2024-04-18_16-14-42_callgrind.out  2024-04-18_16-14-42_gprof_output.txt  2024-04-18_16-14-42_internal.txt  2024-04-18_16-14-42_perf.data
profiling_data/03_primitive_data_types/: 2024-04-18_16-56-45_callgrind.out  2024-04-18_16-56-45_gprof_output.txt  2024-04-18_16-56-45_internal.txt  2024-04-18_16-56-45_perf.data
profiling_data/04_pre_calculation_of_threshold/: 2024-04-18_17-26-04_callgrind.out  2024-04-18_17-26-04_gprof_output.txt  2024-04-18_17-26-04_internal.txt  2024-04-18_17-26-04_perf.data
profiling_data/05_use_double_sequence_storage/: 2024-04-18_17-39-50_callgrind.out  2024-04-18_17-39-50_internal.txt  2024-04-18_17-39-50_perf.data
